# babel-router-rs

./: Cargo.toml  shell.nix
examples/embassy-std-tuntap/: Cargo.toml  justfile
examples/embassy-std-tuntap/src/: babel.rs  main.rs
examples/mesh-vis/: Cargo.toml
examples/mesh-vis/public/: index.mjs
examples/mesh-vis/src/: graph_parse.rs  main.rs
examples/nostd-embassy/: Cargo.toml
examples/nostd-embassy/src/: main.rs
examples/simple-mesh/: Cargo.toml  justfile
examples/simple-mesh/src/: link.rs  main.rs  mesh_router.rs  packet.rs  routing.rs  state.rs
examples/std-embassy/: Cargo.toml
examples/std-embassy/src/: main.rs
root/: Cargo.toml
root/src/: feedback.rs  framework.rs  lib.rs  router.rs  util.rs
root/src/concepts/: neighbour.rs  packet.rs  route.rs
root/tests/: edge_cases.rs  simple_routing.rs  starvation.rs
root/tests/common/: graphs.rs  mod.rs  virtual_network.rs
