[package]
name = "root"
version = "0.1.1"
edition = "2021"
license-file = "../LICENSE"
keywords = ["routing", "network", "io-free"]
categories = ["network-programming"]
repository = "https://github.com/encodeous/root"
readme = "../README.md"
description = "root is an abstract I/O free routing protocol"

[dependencies]
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", optional = true }
cfg-if = "1.0.0"
hashbrown = { version = "0.15.3", features = ["alloc", "serde"] }
thiserror-no-std = "2.0.2"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]
