[package]
name = "embassy-std-tuntap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "executor-thread", "log", "arch-std"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.7.0", features = ["dhcpv4", "log", "medium-ip", "proto-ipv4", "proto-ipv6", "raw", "udp"] }
embassy-net-tuntap = "0.1.0"
embassy-sync = { version = "0.6.2", features = ["std"] }
embassy-time = { version = "0.4.0", features = ["std"] }
embedded-hal-async = "1.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
hashbrown = { version = "0.15.3", features = ["alloc"] }
log = "0.4.27"
rand_core = { version = "0.6.3", features = ["std"] }
heapless = { version = "0.8", default-features = false }
root = { path = "../../root", features = ["serde"] }
static_cell = "2.1.0"
