[package]
name = "std-embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "executor-thread", "log", "arch-std"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6.2", features = ["std"] }
embassy-time = { version = "0.4.0", features = ["std"] }
embedded-hal-async = "1.0.0"
futures = "0.3.31"
hashbrown = { version = "0.15.3", features = ["alloc"] }
root = { path = "../../root", features = ["serde"] }
static_cell = "2.1.0"
